<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".AnalyzeResult">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:paddingHorizontal="18dp">

        <LinearLayout
            android:id="@+id/displayRiskScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            android:background="@drawable/rounded_circle"
            android:layout_marginHorizontal="75dp"
            android:layout_marginTop="34dp"
            android:padding="22dp"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="1000dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/risk_score"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/riskScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="54sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displayUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displayRiskScore"
            android:orientation="vertical"
            android:layout_marginTop="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"/>
            <TextView
                android:id="@+id/urlScanned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displaySpamming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displayUrl"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spamming"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:text="@string/spamming_subtitle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/spamming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displayMalware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displaySpamming"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/malware"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:text="@string/malware_subtitle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/malware"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displayPhishing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displayMalware"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phishing"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:text="@string/phishing_subtitle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/phishing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displaySuspicious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displayPhishing"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suspicious"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:text="@string/suspicious_subtitle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/suspicious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displayAdult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displaySuspicious"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adult"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:text="@string/adult_subtitle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/adult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displayCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displayAdult"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:text="@string/category_subtitle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/displayDomainAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/displayCategory"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="18dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/domain_age"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_semibold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/domainAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>